--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "libs/hbb_common"]
 	path = libs/hbb_common
-	url = https://github.com/nhzlf/hbb_common.git
+	url = https://github.com/nhzlf/hbb_common
 	branch = main
 
