update-submodules.yml

--- a/.github/workflows/update-submodules.yml
+++ b/.github/workflows/update-submodules.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - ".gitmodules"  # 当 .gitmodules 被修改时触发
+      - "/hbb_common"  # 当 .gitmodules 被修改时触发
 jobs:
   update-submodules:
     runs-on: ubuntu-latest
